--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -19,9 +19,29 @@ main {
     "f f";
 }
 
-h1 {
-  font-size: 4em;
-  text-align: center;
+/* 桌面端 */
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 2em;
+    text-align: center;
+    padding: 1px;
+  }
+}
+/* pad */
+@media screen and (min-width: 640px) and (max-width: 1000px) {
+  h1 {
+    font-size: 3em;
+    text-align: center;
+    padding: 1px;
+  }
+}
+/* mobile */
+@media screen and (max-width: 639px){
+  h1 {
+    font-size: 2em;
+    text-align: center;
+    padding: 1px;
+  }
 }
 
 a {
@@ -120,9 +140,9 @@ a {
 }
 
 .message h1 {
-  font-size: 5em;
+  font-size: 4em;
   line-height: 1;
-  margin: 0;
+  margin: 2px;
 }
 
 /* Articles */
